# quarry

./: .gitignore  LICENSE  README.md  conversations.jsonl  pyproject.toml
dataset/: test_gemini.py
quarry/: analysis.py  clustering.py  embedding.py  generation.py  intents.py  labeling.py  paths.py  reporting.py
quarry/templates/: report.html
scripts/: 00_generate_dataset.py  01_embed_and_reduce.py  02_cluster_and_label.py  03_analyze.py  04_render_report.py  run_pipeline.py
tests/: test_sentence_transformer.py
