[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quarry"
version = "0.1.0"
description = "Mine unresolved AI support conversations for automation opportunities."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Siddharth Murugesan" }]
dependencies = [
    "google-genai",
    "python-dotenv",
    "sentence-transformers",
    "umap-learn",
    "hdbscan",
    "numpy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]